force-app/main/default/objects/App_Notification__c/App_Notification__c.object-meta.xml
<CustomObject>
    <description>Stores mobile app notifications sent to an app user and the related record context.</description>
    <label>App Notification</label>
    <nameField>
        <displayFormat>NOTIF-{0000}</displayFormat>
        <label>Notification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>