force-app/main/default/objects/App_Notification__c/fields/App_User__c.field-meta.xml
<CustomField>
    <fullName>App_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the notification to the app user who should receive it.</description>
    <inlineHelpText>Select the app user that this notification should be delivered to.</inlineHelpText>
    <label>App User</label>
    <referenceTo>App_User__c</referenceTo>
    <relationshipLabel>Notifications</relationshipLabel>
    <relationshipName>App_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>