force-app/main/default/objects/App_Notification__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>Stores the main notification message displayed to the app user.</description>
    <inlineHelpText>Enter the detailed message body for the notification.</inlineHelpText>
    <label>Body</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>