force-app/main/default/objects/App_Notification__c/fields/Is_Read__c.field-meta.xml
<CustomField>
    <fullName>Is_Read__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the app user has read the notification.</description>
    <inlineHelpText>Check this when the notification has been viewed by the app user.</inlineHelpText>
    <label>Is Read</label>
    <type>Checkbox</type>
</CustomField>