force-app/main/default/objects/App_Notification__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description>Stores the Salesforce record ID related to the notification context.</description>
    <inlineHelpText>Enter the Salesforce record ID associated with this notification, if applicable.</inlineHelpText>
    <label>Related Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>