force-app/main/default/objects/App_Notification__c/fields/Related_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Type__c</fullName>
    <description>Stores the object API name of the related record for this notification.</description>
    <inlineHelpText>Enter the related record object type, such as Case or Claim__c.</inlineHelpText>
    <label>Related Record Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>