force-app/main/default/objects/App_Notification__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Stores the short title shown at the top of the notification.</description>
    <inlineHelpText>Enter a concise title for the notification.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>