force-app/main/default/objects/App_Notification__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Classifies the notification so the app can display the appropriate content.</description>
    <inlineHelpText>Select the notification category that best matches the message.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
                <default>true</default>
                <label>General</label>
            </value>
            <value>
                <fullName>Claim_Update</fullName>
                <label>Claim Update</label>
            </value>
            <value>
                <fullName>Document_Shared</fullName>
                <label>Document Shared</label>
            </value>
            <value>
                <fullName>Registration_Approved</fullName>
                <label>Registration Approved</label>
            </value>
            <value>
                <fullName>Payment_Received</fullName>
                <label>Payment Received</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>